--- a/index.html
+++ b/index.html
@@ -2,9 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Primary Meta Tags -->
     <title>Ayan Glass & Aluminum Works</title>
+    <meta name="title" content="Ayan Glass & Aluminum Works" />
+    <meta
+      name="description"
+      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.yourwebsite.com/" />
+    <meta property="og:title" content="Ayan Glass & Aluminum Works" />
+    <meta
+      property="og:description"
+      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+    />
+    <meta
+      property="og:image"
+      content="https://www.yourwebsite.com/your-og-image.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.yourwebsite.com/" />
+    <meta property="twitter:title" content="Ayan Glass & Aluminum Works" />
+    <meta
+      property="twitter:description"
+      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.yourwebsite.com/your-twitter-image.jpg"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="author" content="Ayan Aluminum and Glass Works" />
+    <meta
+      name="keywords"
+      content="glass, aluminum, custom designs, residential, commercial"
+    />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.yourwebsite.com/" />
   </head>
   <body>
     <div id="root"></div>
