fixed build issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.yourwebsite.com/" />
+    <meta property="og:url" content="https://ayanglassworks.netlify.app/" />
     <meta property="og:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="og:description"
@@ -23,12 +23,15 @@
     />
     <meta
       property="og:image"
-      content="https://www.yourwebsite.com/your-og-image.jpg"
+      content="https://ayanglassworks.netlify.app/images/gallery/visitCard.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.yourwebsite.com/" />
+    <meta
+      property="twitter:url"
+      content="https://ayanglassworks.netlify.app/"
+    />
     <meta property="twitter:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="twitter:description"
@@ -36,7 +39,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://www.yourwebsite.com/your-twitter-image.jpg"
+      content="https://ayanglassworks.netlify.app/images/gallery/visitCard.png"
     />
 
     <!-- Favicon -->
@@ -55,7 +58,7 @@
     />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://www.yourwebsite.com/" />
+    <link rel="canonical" href="https://ayanglassworks.netlify.app/" />
   </head>
   <body>
     <div id="root"></div>
