--- a/index.html
+++ b/index.html
@@ -59,6 +59,93 @@
 
     <!-- Canonical Link -->
     <link rel="canonical" href="https://ayanglassworks.netlify.app/" />
+
+    <!-- Essential Meta Tags -->
+    <title>
+      Ayan Glass Fabrication - Railing Work, Door Fitting, Glass Work & More
+    </title>
+    <meta
+      name="description"
+      content="Ayan Glass Fabrication specializes in custom railing work, door fitting, glass work, grills, gates, windows, and washroom glass installations. We use top-quality stainless steel, aluminum, and glass to create durable and stylish products."
+    />
+    <meta
+      name="keywords"
+      content="Ayan Glass Fabrication, railing work, door fitting, glass work, metal fabrication, stainless steel, aluminum, grills, gates, windows, washroom glass, led mirrors, custom fabrication"
+    />
+    <meta name="author" content="Ayan Glass Fabrication" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Ayan Glass Fabrication - Railing Work, Door Fitting, Glass Work & More"
+    />
+    <meta
+      name="twitter:description"
+      content="Professional services in railing work, door fitting, glass work, and more. Quality craftsmanship with stainless steel, aluminum, and glass."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.ayanglassfabrication.com/images/gallery/visitCard.png"
+    />
+    <!-- Update with your image URL -->
+
+    <!-- Viewport Configuration -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.ayanglassfabrication.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://www.ayanglassfabrication.com/favicon.ico" />
+    <!-- Update with your favicon URL -->
+
+    <!-- Additional SEO Tips -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+
+    <!-- Schema.org for Google+ -->
+    <meta itemprop="name" content="Ayan Glass Fabrication" />
+    <meta
+      itemprop="description"
+      content="Specialized services in railing work, door fitting, glass work, grills, gates, windows, and washroom glass."
+    />
+    <meta
+      itemprop="image"
+      content="https://www.ayanglassfabrication.com/images/gallery/visitCard.png"
+    />
+    <!-- Update with your image URL -->
+
+    <!-- Structured Data for Local Business -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Ayan Glass Fabrication",
+        "image": "https://www.ayanglassfabrication.com/images/gallery/visitCard.png", <!-- Update with your image URL -->
+        "@id": "https://www.ayanglassfabrication.com",
+        "url": "https://www.ayanglassfabrication.com",
+        "telephone": "+1234567890", <!-- Update with your phone number -->
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "123 Fabrication St.",
+          "addressLocality": "City Name",
+          "postalCode": "12345",
+          "addressCountry": "Country"
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "08:00",
+          "closes": "18:00"
+        },
+        "sameAs": [
+          "https://www.facebook.com/ayanglassfabrication",
+          "https://www.instagram.com/ayanglassfabrication"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
