added domain name and emails

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ayanglassworks.netlify.app/" />
+    <meta property="og:url" content="http://ayanglass.com/" />
     <meta property="og:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="og:description"
@@ -23,15 +23,12 @@
     />
     <meta
       property="og:image"
-      content="https://ayanglassworks.netlify.app/images/gallery/visitCard.png"
+      content="http://ayanglass.com/images/gallery/visitCard.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://ayanglassworks.netlify.app/"
-    />
+    <meta property="twitter:url" content="http://ayanglass.com/" />
     <meta property="twitter:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="twitter:description"
@@ -39,7 +36,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://ayanglassworks.netlify.app/images/gallery/visitCard.png"
+      content="http://ayanglass.com/images/gallery/visitCard.png"
     />
 
     <!-- Favicon -->
@@ -58,7 +55,7 @@
     />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://ayanglassworks.netlify.app/" />
+    <link rel="canonical" href="http://ayanglass.com/" />
 
     <!-- Essential Meta Tags -->
     <title>
@@ -86,7 +83,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.ayanglassfabrication.com/images/gallery/visitCard.png"
+      content="http://ayanglass.com/images/gallery/visitCard.png"
     />
     <!-- Update with your image URL -->
 
@@ -94,10 +91,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://www.ayanglassfabrication.com" />
+    <link rel="canonical" href="http://ayanglass.com" />
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.ayanglassfabrication.com/favicon.ico" />
+    <link rel="icon" href="http://ayanglass.com/favicon.ico" />
     <!-- Update with your favicon URL -->
 
     <!-- Additional SEO Tips -->
@@ -113,7 +110,7 @@
     />
     <meta
       itemprop="image"
-      content="https://www.ayanglassfabrication.com/images/gallery/visitCard.png"
+      content="http://ayanglass.com/images/gallery/visitCard.png"
     />
     <!-- Update with your image URL -->
 
@@ -123,9 +120,9 @@
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "name": "Ayan Glass Fabrication",
-        "image": "https://www.ayanglassfabrication.com/images/gallery/visitCard.png", <!-- Update with your image URL -->
-        "@id": "https://www.ayanglassfabrication.com",
-        "url": "https://www.ayanglassfabrication.com",
+        "image": "http://ayanglass.com/images/gallery/visitCard.png", <!-- Update with your image URL -->
+        "@id": "http://ayanglass.com",
+        "url": "http://ayanglass.com",
         "telephone": "+1234567890", <!-- Update with your phone number -->
         "address": {
           "@type": "PostalAddress",
