added seo contents

--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
       name="description"
       content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
     />
+    <meta
+      name="keywords"
+      content="glass, aluminum, custom designs, residential, commercial"
+    />
+    <meta name="author" content="Ayan Glass Fabrication" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://ayanglass.com/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://ayanglass.com/" />
+    <meta property="og:url" content="https://ayanglass.com/" />
     <meta property="og:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="og:description"
@@ -23,12 +35,12 @@
     />
     <meta
       property="og:image"
-      content="http://ayanglass.com/images/gallery/visitCard.png"
+      content="https://ayanglass.com/images/gallery/visitCard.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="http://ayanglass.com/" />
+    <meta property="twitter:url" content="https://ayanglass.com/" />
     <meta property="twitter:title" content="Ayan Glass & Aluminum Works" />
     <meta
       property="twitter:description"
@@ -36,83 +48,12 @@
     />
     <meta
       property="twitter:image"
-      content="http://ayanglass.com/images/gallery/visitCard.png"
+      content="https://ayanglass.com/images/gallery/visitCard.png"
     />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-
-    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
-    <!-- Additional Meta Tags -->
-    <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="author" content="Ayan Aluminum and Glass Works" />
-    <meta
-      name="keywords"
-      content="glass, aluminum, custom designs, residential, commercial"
-    />
-
-    <!-- Canonical Link -->
-    <link rel="canonical" href="http://ayanglass.com/" />
-
-    <!-- Essential Meta Tags -->
-    <title>
-      Ayan Glass Fabrication - Railing Work, Door Fitting, Glass Work & More
-    </title>
-    <meta
-      name="description"
-      content="Ayan Glass Fabrication specializes in custom railing work, door fitting, glass work, grills, gates, windows, and washroom glass installations. We use top-quality stainless steel, aluminum, and glass to create durable and stylish products."
-    />
-    <meta
-      name="keywords"
-      content="Ayan Glass Fabrication, railing work, door fitting, glass work, metal fabrication, stainless steel, aluminum, grills, gates, windows, washroom glass, led mirrors, custom fabrication"
-    />
-    <meta name="author" content="Ayan Glass Fabrication" />
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Ayan Glass Fabrication - Railing Work, Door Fitting, Glass Work & More"
-    />
-    <meta
-      name="twitter:description"
-      content="Professional services in railing work, door fitting, glass work, and more. Quality craftsmanship with stainless steel, aluminum, and glass."
-    />
-    <meta
-      name="twitter:image"
-      content="http://ayanglass.com/images/gallery/visitCard.png"
-    />
-    <!-- Update with your image URL -->
-
-    <!-- Viewport Configuration -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Canonical Link -->
-    <link rel="canonical" href="http://ayanglass.com" />
-
-    <!-- Favicon -->
-    <link rel="icon" href="http://ayanglass.com/favicon.ico" />
-    <!-- Update with your favicon URL -->
-
-    <!-- Additional SEO Tips -->
-    <meta name="robots" content="index, follow" />
-    <meta name="language" content="English" />
-    <meta name="distribution" content="global" />
-
-    <!-- Schema.org for Google+ -->
-    <meta itemprop="name" content="Ayan Glass Fabrication" />
-    <meta
-      itemprop="description"
-      content="Specialized services in railing work, door fitting, glass work, grills, gates, windows, and washroom glass."
-    />
-    <meta
-      itemprop="image"
-      content="http://ayanglass.com/images/gallery/visitCard.png"
-    />
-    <!-- Update with your image URL -->
 
     <!-- Structured Data for Local Business -->
     <script type="application/ld+json">
@@ -120,10 +61,10 @@
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "name": "Ayan Glass Fabrication",
-        "image": "http://ayanglass.com/images/gallery/visitCard.png", <!-- Update with your image URL -->
-        "@id": "http://ayanglass.com",
-        "url": "http://ayanglass.com",
-        "telephone": "+1234567890", <!-- Update with your phone number -->
+        "image": "https://ayanglass.com/images/gallery/visitCard.png",
+        "@id": "https://ayanglass.com",
+        "url": "https://ayanglass.com",
+        "telephone": "+1234567890",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "123 Fabrication St.",
