update of html and sitemap.xml

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Primary Meta Tags -->
-    <title>Ayan Glass & Aluminum Works</title>
-    <meta name="title" content="Ayan Glass & Aluminum Works" />
+    <title>Ayan Glass, Aluminum &  SS Steel Works</title>
+    <meta name="title" content="Ayan Glass, Aluminum & SS Steel Works" />
     <meta
       name="description"
-      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+      content="High-quality Glass, Aluminum and SS steel works for residential and commercial properties. Custom designs available."
     />
     <meta
       name="keywords"
-      content="glass, aluminum, custom designs, residential, commercial"
+      content="SS Steel, Glass, Railing, Glass railing, Tuffen Glass, Tuffen Glass Partition, Tuffen Glass Spider Fitting, Almunium Glass Glazing, SS Steel Railing, Profile Tuffen Door, Tuffen Glass Canopy, Canopy, UPVC, UPVC Window, Profile glass Partition, Aluminum, Kitchen,, Almunium Modular Kitchen, Almunium Partition, LED Mirror, commercial"
     />
     <meta name="author" content="Ayan Glass Fabrication" />
     <meta name="robots" content="index, follow" />
@@ -28,10 +28,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ayanglass.com/" />
-    <meta property="og:title" content="Ayan Glass & Aluminum Works" />
+    <meta property="og:title" content="Ayan Glass, Aluminum &  SS Steel Works" />
     <meta
       property="og:description"
-      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+      content="High-quality Glass, Aluminum and SS steel works for residential and commercial properties. Custom designs available."
     />
     <meta
       property="og:image"
@@ -41,10 +41,10 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ayanglass.com/" />
-    <meta property="twitter:title" content="Ayan Glass & Aluminum Works" />
+    <meta property="twitter:title" content="Ayan Glass, Aluminum &  SS Steel Works" />
     <meta
       property="twitter:description"
-      content="High-quality glass and aluminum works for residential and commercial properties. Custom designs available."
+      content="High-quality Glass, Aluminum and SS steel works for residential and commercial properties. Custom designs available."
     />
     <meta
       property="twitter:image"
